# phatjs-playground

./: Cargo.toml  Deploy.toml  README.md  lib.rs  rust-toolchain.toml  witnessed-build
.github/workflows/: build.yaml
examples/: authenticated-anonymous-message.js  decentralized-authenticated-anonymous-message.js  github-actions-witness.js  github-profile.js
