[package]
name = "proven"
version = "0.1.0"
authors = ["Kevin Wang <wy721@qq.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }
pink = { package = "pink-extension", version = "0.4", default-features = false }
phat_js = { version = "0.1", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "pink/std", "phat_js/std"]
ink-as-dependency = []
e2e-tests = []
